--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ img {
   /* colors */
   --hue: 159;
   /* HSL color mode */
-  --base-color: # 8A2BE2;
-  --base-color-second:  # 8A2BE2;
+  --base-color: #993399;
+  --base-color-second:  #993399;
   --base-color-alt: hsl(var(--hue) 57% 53%);
   --title-color: hsl(var(--hue) 41% 10%);
   --text-color: hsl(0 0% 46%);
@@ -125,7 +125,7 @@ body {
 }
 
 #header {
-  border-bottom: 1px solid # 9932CC;
+  border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
   display: flex;
 
