--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ img {
   /* colors */
   --hue: 159;
   /* HSL color mode */
-  --base-color: #7600a9;
-  --base-color-second:  #993399;
+  --base-color: #00ff00 ;
+  --base-color-second:  #00ff00 ;
   --base-color-alt: hsl(var(--hue) 57% 53%);
   --title-color: hsl(var(--hue) 41% 10%);
   --text-color: hsl(0 0% 46%);
